minikube/sage-ui-db.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: db
  name: db
  namespace: sage
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        k8s-app: db
    spec:
      containers:
      - image: mysql:8
        name: db
        #resources:
        #  limits:
        #    cpu: 1
        #    memory: 1Gi
        #  requests:
        #    memory: 1Gi
        #    cpu: 1
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: sage-ui-db
        ports:
          - name: db
            containerPort: 3306
      restartPolicy: Always
      volumes:
      - name: sage-ui-db
        persistentVolumeClaim:
          claimName: sage-ui-db
