minikube/sage-ui.Deployment.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: sage-ui
  namespace: sage
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: sage-ui
  template:
    metadata:
      labels:
        k8s-app: sage-ui
    spec:
      containers:
      - image: waggle/sage-ui:latest
        name: sage-ui
        command:
          - /testing-entrypoint.sh
        ports:
        - containerPort: 80
        #resources:
        #  limits:
        #    cpu: 0.1
        #    memory: 500Mi
        #  requests:
        #    memory: 500Mi
        #    cpu: 0.1
      restartPolicy: Always
