minikube/sage-ui-db.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: sage
  labels:
    app: db
spec:
  selector:
    k8s-app: db
  #type: ClusterIP (no need to expose)
  ports:
  - name: db
    port: 3306
    protocol: TCP
    targetPort: 3306
