minikube/sage-ui.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sage-ui
  namespace: sage
spec:
  type: NodePort #(ClusterIP  does not seem to work with ingress)
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: "name8000"
  selector:
    k8s-app: sage-ui
