minikube/sage-ui.Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sage-ui
  namespace: sage
  annotations:
    #kubernetes.io/ingress.class: traefik
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  #- host: sage.nautilus.optiputer.net
  - http:
      paths:
      - path: /
        backend:
          serviceName: sage-ui
          servicePort: 80
